--- a/public/generate/index.html
+++ b/public/generate/index.html
@@ -4,23 +4,53 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>GENERATE – Validador Blockchain | Inycom</title>
+
+    <link
+      href="http://fonts.googleapis.com/css?family=Oswald:400,700"
+      rel="stylesheet"
+      type="text/css"
+    />
+    <link rel="stylesheet" href="generate.css" />
   </head>
   <body>
-    <form enctype="multipart/form-data" method="post" name="generate">
-      <label>PDF file:</label>
-      <input type="file" name="document" required />
-      <br />
-      <label>JSON format:</label>
-      <input
-        type="text"
-        name="format"
-        placeholder="base64 | hash"
-        required
-        size="32"
-      />
-      <input type="submit" value="ENVIAR" />
-    </form>
-    <div id="output"></div>
+    <header>
+      <div class="menu">
+        <div class="contenedor">
+          <div class="logo">Inycom</div>
+          <nav>
+            <ul>
+              <li><a href="/generate">Generar</a></li>
+              <li><a href="/validate">Validar</a></li>
+              <li><a href="/recreate">Recrear</a></li>
+            </ul>
+          </nav>
+        </div>
+      </div>
+    </header>
+
+    <div class="texto">
+      <h2>Blockchain Validator</h2>
+    </div>
+
+    <div class="principal contenedor">
+      <article>
+        <form enctype="multipart/form-data" method="post" name="generate">
+          <label>PDF file:</label>
+          <input type="file" name="document" required />
+          <br />
+          <label>JSON format:</label>
+          <input
+            type="text"
+            name="format"
+            placeholder="base64 | hash"
+            required
+            size="32"
+          />
+          <input type="submit" value="ENVIAR" />
+        </form>
+        <div id="output"></div>
+      </article>
+    </div>
 
     <script type="text/javascript" src="generate.js"></script>
   </body>
