Update new style

--- a/public/generate/index.html
+++ b/public/generate/index.html
@@ -16,12 +16,12 @@
     <header>
       <div class="menu">
         <div class="contenedor">
-          <div class="logo">Inycom</div>
+          <div class="logo"><img src="logo.svg" height="40px" /></div>
           <nav>
             <ul>
-              <li><a href="/generate">Generar</a></li>
-              <li><a href="/validate">Validar</a></li>
-              <li><a href="/recreate">Recrear</a></li>
+              <li><a href="/generate">GENERAR</a></li>
+              <li><a href="/validate">VALIDAR</a></li>
+              <li><a href="/recreate">RECREAR</a></li>
             </ul>
           </nav>
         </div>
