--- a/public/generate/index.html
+++ b/public/generate/index.html
@@ -10,13 +10,13 @@
       rel="stylesheet"
       type="text/css"
     />
-    <link rel="stylesheet" href="generate.css" />
+    <link rel="stylesheet" href="../style.css" />
   </head>
   <body>
     <header>
       <div class="menu">
-        <div class="contenedor">
-          <div class="logo"><img src="logo.svg" height="40px" /></div>
+        <div class="container">
+          <div class="logo"><img src="../logo.svg" height="40px" /></div>
           <nav>
             <ul>
               <li><a href="/generate">GENERAR</a></li>
@@ -28,11 +28,13 @@
       </div>
     </header>
 
-    <div class="texto">
+    <div class="text">
       <h2>Blockchain Validator</h2>
+      <br />
+      <p>GENERAR</p>
     </div>
 
-    <div class="principal contenedor">
+    <div class="main container">
       <article>
         <form enctype="multipart/form-data" method="post" name="generate">
           <label>PDF file:</label>
