--- a/public/recreate/index.html
+++ b/public/recreate/index.html
@@ -4,14 +4,46 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>RECREATE – Validador Blockchain | Inycom</title>
+
+    <link
+      href="http://fonts.googleapis.com/css?family=Oswald:400,700"
+      rel="stylesheet"
+      type="text/css"
+    />
+    <link rel="stylesheet" href="../style.css" />
   </head>
   <body>
-    <form enctype="multipart/form-data" method="post" name="recreate">
-      <label>JSON file:</label>
-      <input type="file" name="document" required />
-      <input type="submit" value="ENVIAR" />
-    </form>
-    <div id="output"></div>
+    <header>
+      <div class="menu">
+        <div class="container">
+          <div class="logo"><img src="../logo.svg" height="40px" /></div>
+          <nav>
+            <ul>
+              <li><a href="/generate">GENERAR</a></li>
+              <li><a href="/validate">VALIDAR</a></li>
+              <li><a href="/recreate">RECREAR</a></li>
+            </ul>
+          </nav>
+        </div>
+      </div>
+    </header>
+
+    <div class="text">
+      <h2>Blockchain Validator</h2>
+      <br />
+      <p>RECREAR</p>
+    </div>
+
+    <div class="main container">
+      <article>
+        <form enctype="multipart/form-data" method="post" name="recreate">
+          <label>JSON file:</label>
+          <input type="file" name="document" required />
+          <input type="submit" value="ENVIAR" />
+        </form>
+        <div id="output"></div>
+      </article>
+    </div>
 
     <script type="text/javascript" src="recreate.js"></script>
   </body>
